force-app/main/default/objects/Contact/fields/Anything_on_Background__c.field-meta.xml
<CustomField>
    <fullName>Anything_on_Background__c</fullName>
    <label>Anything on Background</label>
    <length>255</length>
    <type>Text</type>
</CustomField>