force-app/main/default/objects/Contact/fields/AP_Key_Contact__c.field-meta.xml
<CustomField>
    <fullName>AP_Key_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AP Key Contact</label>
    <type>Checkbox</type>
</CustomField>