force-app/main/default/objects/Contact/fields/App_Registration_Time__c.field-meta.xml
<CustomField>
    <fullName>App_Registration_Time__c</fullName>
    <label>App Registration Time</label>
    <type>DateTime</type>
</CustomField>