force-app/main/default/objects/Contact/fields/Applicant_Source__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Source__c</fullName>
    <label>Applicant Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Google</fullName>
            </value>
            <value>
                <fullName>LinkedIn</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Red Orange</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>