force-app/main/default/objects/Contact/fields/Approver_Guide_Sent__c.field-meta.xml
<CustomField>
    <fullName>Approver_Guide_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approver Guide Sent</label>
    <type>Checkbox</type>
</CustomField>