force-app/main/default/objects/Contact/fields/Automatch_Notes__c.field-meta.xml
<CustomField>
    <fullName>Automatch_Notes__c</fullName>
    <label>Automatch Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>