force-app/main/default/objects/Contact/fields/Automatched__c.field-meta.xml
<CustomField>
    <fullName>Automatched__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Automatched</label>
    <type>Checkbox</type>
</CustomField>