force-app/main/default/objects/Contact/fields/Availability_To_Interview__c.field-meta.xml
<CustomField>
    <fullName>Availability_To_Interview__c</fullName>
    <label>Availability To Interview</label>
    <length>255</length>
    <type>Text</type>
</CustomField>