force-app/main/default/objects/Contact/fields/Available_to_Start__c.field-meta.xml
<CustomField>
    <fullName>Available_to_Start__c</fullName>
    <description>Earliest date that Candidate can Start</description>
    <label>Available to Start</label>
    <type>Date</type>
</CustomField>