force-app/main/default/objects/Contact/fields/B_P_Notes_Talent_Acquisition__c.field-meta.xml
<CustomField>
    <fullName>B_P_Notes_Talent_Acquisition__c</fullName>
    <label>B&amp;P Notes - Talent Acquisition</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>