force-app/main/default/objects/Contact/fields/BD_Notes_Talent_Acquisition__c.field-meta.xml
<CustomField>
    <fullName>BD_Notes_Talent_Acquisition__c</fullName>
    <label>BD Notes - Talent Acquisition</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>