force-app/main/default/objects/Contact/fields/Best_time_to_interview__c.field-meta.xml
<CustomField>
    <fullName>Best_time_to_interview__c</fullName>
    <label>Best time to interview</label>
    <length>255</length>
    <type>Text</type>
</CustomField>