force-app/main/default/objects/Contact/fields/Billing_and_Payroll_Systems__c.field-meta.xml
<CustomField>
    <fullName>Billing_and_Payroll_Systems__c</fullName>
    <label>Billing and Payroll Systems</label>
    <type>TextArea</type>
</CustomField>