force-app/main/default/objects/Contact/fields/Candidate_Profile_Score__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Profile_Score__c</fullName>
    <label>Candidate Profile Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>