force-app/main/default/objects/Contact/fields/Candidate_Profile_Strength__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Profile_Strength__c</fullName>
    <label>Candidate Profile Strength</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>