force-app/main/default/objects/Contact/fields/Candidate_Source__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Source__c</fullName>
    <description>Optional(Only if Candidate Sourcing is used)</description>
    <label>Candidate Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>Website</fullName>
            </value>
            <value>
                <fullName>Portal</fullName>
            </value>
            <value>
                <fullName>Red Orange</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>