force-app/main/default/objects/Contact/fields/Certifications__c.field-meta.xml
<CustomField>
    <fullName>Certifications__c</fullName>
    <description>Healthcare Licences and Certificates</description>
    <label>Certifications</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LPN</fullName>
            </value>
            <value>
                <fullName>PA</fullName>
            </value>
            <value>
                <fullName>5-8</fullName>
            </value>
            <value>
                <fullName>ACLS</fullName>
            </value>
            <value>
                <fullName>ARRT</fullName>
            </value>
            <value>
                <fullName>B-2</fullName>
            </value>
            <value>
                <fullName>BCBA</fullName>
            </value>
            <value>
                <fullName>BLS</fullName>
            </value>
            <value>
                <fullName>CCC</fullName>
            </value>
            <value>
                <fullName>CPI</fullName>
            </value>
            <value>
                <fullName>CSFA</fullName>
            </value>
            <value>
                <fullName>Fetal Monitoring</fullName>
            </value>
            <value>
                <fullName>K-12</fullName>
            </value>
            <value>
                <fullName>NIH</fullName>
            </value>
            <value>
                <fullName>NIHSS</fullName>
            </value>
            <value>
                <fullName>Not Applicable / Administrative</fullName>
            </value>
            <value>
                <fullName>NRP</fullName>
            </value>
            <value>
                <fullName>Orientation and Mobility</fullName>
            </value>
            <value>
                <fullName>PALS</fullName>
            </value>
            <value>
                <fullName>TNCC</fullName>
            </value>
            <value>
                <fullName>TSSLD / TSHH</fullName>
            </value>
            <value>
                <fullName>Wound Care</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>