force-app/main/default/objects/Contact/fields/Certifications_Expiry__c.field-meta.xml
<CustomField>
    <fullName>Certifications_Expiry__c</fullName>
    <description>Expiry date(s) for certifications (Might need multiple fields as per requirement) (Healthcare Specific)</description>
    <label>Certifications Expiry</label>
    <type>Date</type>
</CustomField>