force-app/main/default/objects/Contact/fields/Certifications_for_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Certifications_for_Marketing__c</fullName>
    <label>Certifications for Marketing</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>