force-app/main/default/objects/Contact/fields/Charting_Systems__c.field-meta.xml
<CustomField>
    <fullName>Charting_Systems__c</fullName>
    <label>Charting Systems</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Test</fullName>
            </value>
            <value>
                <fullName>Casamba</fullName>
            </value>
            <value>
                <fullName>Cerner</fullName>
            </value>
            <value>
                <fullName>CPN</fullName>
            </value>
            <value>
                <fullName>CPOE</fullName>
            </value>
            <value>
                <fullName>Dairyland</fullName>
            </value>
            <value>
                <fullName>eCare</fullName>
            </value>
            <value>
                <fullName>Eclipysys</fullName>
            </value>
            <value>
                <fullName>EMAR</fullName>
            </value>
            <value>
                <fullName>Envision</fullName>
            </value>
            <value>
                <fullName>EPHR</fullName>
            </value>
            <value>
                <fullName>Epic</fullName>
            </value>
            <value>
                <fullName>Health Connect</fullName>
            </value>
            <value>
                <fullName>Healthplan</fullName>
            </value>
            <value>
                <fullName>Horizon</fullName>
            </value>
            <value>
                <fullName>Ibex</fullName>
            </value>
            <value>
                <fullName>Idx</fullName>
            </value>
            <value>
                <fullName>Interqual</fullName>
            </value>
            <value>
                <fullName>Kaiser HER</fullName>
            </value>
            <value>
                <fullName>Kinser</fullName>
            </value>
            <value>
                <fullName>Lynx</fullName>
            </value>
            <value>
                <fullName>Matrix</fullName>
            </value>
            <value>
                <fullName>McKesson</fullName>
            </value>
            <value>
                <fullName>MEDITECH</fullName>
            </value>
            <value>
                <fullName>MIS</fullName>
            </value>
            <value>
                <fullName>M-Stat</fullName>
            </value>
            <value>
                <fullName>Net Health</fullName>
            </value>
            <value>
                <fullName>Not Applicable / Unknown</fullName>
            </value>
            <value>
                <fullName>OASIS</fullName>
            </value>
            <value>
                <fullName>Opus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>