force-app/main/default/objects/Contact/fields/Chatter_Id__c.field-meta.xml
<CustomField>
    <fullName>Chatter_Id__c</fullName>
    <label>Chatter Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>