force-app/main/default/objects/Contact/fields/Clinical_Trial_Experience__c.field-meta.xml
<CustomField>
    <fullName>Clinical_Trial_Experience__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Experience in clinical research</description>
    <label>Clinical Trial Experience</label>
    <type>Checkbox</type>
</CustomField>