force-app/main/default/objects/Contact/fields/CloudCall_ID__c.field-meta.xml
<CustomField>
    <fullName>CloudCall_ID__c</fullName>
    <label>CloudCall ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>