force-app/main/default/objects/Contact/fields/Community_Events__c.field-meta.xml
<CustomField>
    <fullName>Community_Events__c</fullName>
    <label>Community Events</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>