force-app/main/default/objects/Contact/fields/Companies_Contacted__c.field-meta.xml
<CustomField>
    <fullName>Companies_Contacted__c</fullName>
    <label>Companies Contacted</label>
    <length>255</length>
    <type>Text</type>
</CustomField>