force-app/main/default/objects/Contact/fields/Contact_Last_Activity__c.field-meta.xml
<CustomField>
    <fullName>Contact_Last_Activity__c</fullName>
    <label>Contact Last Activity</label>
    <type>TextArea</type>
</CustomField>