force-app/main/default/objects/Contact/fields/Contact_Last_Activity_COVID_Vaccinated__c.field-meta.xml
<CustomField>
    <fullName>Contact_Last_Activity_COVID_Vaccinated__c</fullName>
    <label>Contact Last Activity COVID Vaccinated</label>
    <type>TextArea</type>
</CustomField>