force-app/main/default/objects/Contact/fields/Contact_Last_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Contact_Last_Activity_Date__c</fullName>
    <label>Contact Last Activity Date</label>
    <type>Date</type>
</CustomField>