force-app/main/default/objects/Contact/fields/CORE_Modules_Sent__c.field-meta.xml
<CustomField>
    <fullName>CORE_Modules_Sent__c</fullName>
    <label>CORE Modules Sent</label>
    <type>Date</type>
</CustomField>