force-app/main/default/objects/Contact/fields/COVID_Vaccinated__c.field-meta.xml
<CustomField>
    <fullName>COVID_Vaccinated__c</fullName>
    <label>COVID Vaccinated</label>
    <type>TextArea</type>
</CustomField>