force-app/main/default/objects/Contact/fields/Cred_Placement_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Cred_Placement_Start_Date__c</fullName>
    <label>Cred Placement Start Date</label>
    <type>Date</type>
</CustomField>