force-app/main/default/objects/Contact/fields/Cred_Placement_Status__c.field-meta.xml
<CustomField>
    <fullName>Cred_Placement_Status__c</fullName>
    <label>Cred Placement Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>