force-app/main/default/objects/Contact/fields/Credentialing_Notes_Talent_Acquisition__c.field-meta.xml
<CustomField>
    <fullName>Credentialing_Notes_Talent_Acquisition__c</fullName>
    <label>Credentialing Notes - Talent Acquisition</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>