force-app/main/default/objects/Contact/fields/Criteria_to_Accept__c.field-meta.xml
<CustomField>
    <fullName>Criteria_to_Accept__c</fullName>
    <label>Criteria to Accept</label>
    <length>255</length>
    <type>Text</type>
</CustomField>