force-app/main/default/objects/Contact/fields/Current_Net_Take_Home__c.field-meta.xml
<CustomField>
    <fullName>Current_Net_Take_Home__c</fullName>
    <description>Net Take home salary of the Candidiate</description>
    <label>Current Net Take Home</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>