force-app/main/default/objects/Contact/fields/Current_Pay__c.field-meta.xml
<CustomField>
    <fullName>Current_Pay__c</fullName>
    <label>Current Pay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>