force-app/main/default/objects/Contact/fields/Data_Analysis_Experience__c.field-meta.xml
<CustomField>
    <fullName>Data_Analysis_Experience__c</fullName>
    <label>Data Analysis Experience</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>