force-app/main/default/objects/Contact/fields/DEA_License_Number__c.field-meta.xml
<CustomField>
    <fullName>DEA_License_Number__c</fullName>
    <description>US Drug Enforcement Administration license number</description>
    <label>DEA License Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>