force-app/main/default/objects/Contact/fields/Desired_pay__c.field-meta.xml
<CustomField>
    <fullName>Desired_pay__c</fullName>
    <label>Desired pay</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>