force-app/main/default/objects/Contact/fields/DHC_Email__c.field-meta.xml
<CustomField>
    <fullName>DHC_Email__c</fullName>
    <label>DHC Email</label>
    <type>TextArea</type>
</CustomField>