force-app/main/default/objects/Contact/fields/DHC_LinkedIn_Profile__c.field-meta.xml
<CustomField>
    <fullName>DHC_LinkedIn_Profile__c</fullName>
    <label>DHC LinkedIn Profile</label>
    <length>2200</length>
    <type>LongTextArea</type>
</CustomField>