force-app/main/default/objects/Contact/fields/Direct_or_MSP_Contact__c.field-meta.xml
<CustomField>
    <fullName>Direct_or_MSP_Contact__c</fullName>
    <label>Direct or MSP Contact</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
            </value>
            <value>
                <fullName>MSP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>