force-app/main/default/objects/Contact/fields/Disability__c.field-meta.xml
<CustomField>
    <fullName>Disability__c</fullName>
    <label>Disability</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Disability</fullName>
            </value>
            <value>
                <fullName>Partial Disability</fullName>
            </value>
            <value>
                <fullName>Full Disability</fullName>
            </value>
            <value>
                <fullName>Temporary Disability</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>