force-app/main/default/objects/Contact/fields/DNU_Reason__c.field-meta.xml
<CustomField>
    <fullName>DNU_Reason__c</fullName>
    <label>DNU Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Clinical Incident</fullName>
            </value>
            <value>
                <fullName>Professional Counseling</fullName>
            </value>
            <value>
                <fullName>Walked Off Job</fullName>
            </value>
            <value>
                <fullName>Backed Out of Job</fullName>
            </value>
            <value>
                <fullName>(get values)</fullName>
            </value>
            <value>
                <fullName>Unreliable</fullName>
            </value>
            <value>
                <fullName>Not a Medical Professional</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>