force-app/main/default/objects/Contact/fields/Education_History__c.field-meta.xml
<CustomField>
    <fullName>Education_History__c</fullName>
    <description>Education History of the Candidate from the Application/Resume</description>
    <label>Education History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>