force-app/main/default/objects/Contact/fields/Emergency_Contact_name__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_name__c</fullName>
    <description>Preferred for Healthcare business (Healthcare Specific)</description>
    <label>Emergency Contact name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>