force-app/main/default/objects/Contact/fields/Employment_History__c.field-meta.xml
<CustomField>
    <fullName>Employment_History__c</fullName>
    <description>Employment History of the candidate from the Application/Resume</description>
    <label>Employment History</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>