force-app/main/default/objects/Contact/fields/Essium_ID__c.field-meta.xml
<CustomField>
    <fullName>Essium_ID__c</fullName>
    <externalId>true</externalId>
    <label>Essium ID</label>
    <length>13</length>
    <type>Text</type>
</CustomField>