force-app/main/default/objects/Contact/fields/Existing_Agreements__c.field-meta.xml
<CustomField>
    <fullName>Existing_Agreements__c</fullName>
    <formula>Account.Existing_Agreements_Text__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Existing Agreements</label>
    <type>Text</type>
</CustomField>