force-app/main/default/objects/Contact/fields/Extended_School_Year_ESY__c.field-meta.xml
<CustomField>
    <fullName>Extended_School_Year_ESY__c</fullName>
    <formula>Account.Extended_School_Year_ESY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Extended School Year (ESY)</label>
    <type>Checkbox</type>
</CustomField>