force-app/main/default/objects/Contact/fields/Federal_Exemptions_Legacy__c.field-meta.xml
<CustomField>
    <fullName>Federal_Exemptions_Legacy__c</fullName>
    <label>Federal Exemptions Legacy</label>
    <length>255</length>
    <type>Text</type>
</CustomField>